--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.retrofit
+    implementation libs.converter.gson
+    implementation libs.glide
+    implementation libs.lifecycle.runtime
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
